apps/base/overture/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: overture
  labels:
    http-ingress: "true"
