apps/base/overture/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overture
  namespace: overture
  labels:
    app: overture
spec:
  type: ClusterIP
  selector:
    app: overture
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
